--- a/DOCUMENTS/settings.sty
+++ b/DOCUMENTS/settings.sty
@@ -13,6 +13,9 @@
 \usepackage{mathptmx}
 \usepackage{pifont}
 \usepackage{textcomp}
+\usepackage{xcolor}
+\usepackage{listings}
+\usepackage{textcomp}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % for figures and visuals
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
