combining parsing update

--- a/scripts/rombus.ipynb
+++ b/scripts/rombus.ipynb
@@ -39,6 +39,8 @@
     "        # looks for TEST then a digit, re.search returns None if can't find pattern\n",
     "        test_number_match = re.search(\"TEST\\\\s+\\\\d\\\\d\\\\d\\\\d\", line)\n",
     "        # print(line[test_number_match.start():])\n",
+    "        \n",
+    "        # ensure test number exists and doesn't equal the previous test number\n",
     "        if (test_number_match is not None) and (line[test_number_match.start():] != test_number):\n",
     "            # assumes test number will be end of string, gets start of match to EOL\n",
     "            test_number = line[test_number_match.start():test_number_match.end()]\n",
